--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
        <!--
           Course:  Web Application Development
           Assignment:  Lesson 4 (JavaScript 1)
-          Author:  
-          Date:   
+          Author:  Dathan Busby
+          Date:  10-19-18 
           Filename: index.html
        -->
        <meta charset="utf-8" />
@@ -64,7 +64,22 @@
                       * HINT:  Use the following variable names:  householdInput, miscellaneousInput, transportationInput
                       *
                       *************************************************************************************************-->
-
+                      <p><label for="householdInput">
+                             Household (clothes, pets, luxuries, etc.):
+                            <input type="text" id="householdInput" name="household" />
+                          </label>
+                      </p>
+                      <p><label for="transportationInput">
+                             Transportation (cars, gas, repairs, etc.):
+                            <input type="text" id="transportationInput" name="transportation" />
+                          </label>
+                      </p>
+                      <p><label for="miscellaneousInput">
+                             Miscellaneous (memberships, entertainment, etc.):
+                            <input type="text" id="miscellaneousInput" name="miscellaneous" />
+                          </label>
+                      </p>
+                      
                 </fieldset>                 
 
 
